<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/page_title"
        android:inputType="textPersonName"
        android:text="@string/settings"
        android:autofillHints="" />

    <LinearLayout
        android:id="@+id/Colors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/white_color"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/whiteKeys"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:text="@string/white_keys" />

            <com.skydoves.colorpickerview.ColorPickerView
                android:id="@+id/wKeyColorPicker"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:palette="@drawable/palette"
                app:selector="@drawable/wheel">

            </com.skydoves.colorpickerview.ColorPickerView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/black_color"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/blackKeys"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:text="@string/black_keys" />

            <com.skydoves.colorpickerview.ColorPickerView
                android:id="@+id/bKeyColorPicker"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:palette="@drawable/palette"
                app:selector="@drawable/wheel" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/shading_color"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shadowColor"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:text="@string/shadow_color" />

            <com.skydoves.colorpickerview.ColorPickerView
                android:id="@+id/sColorPicker"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:palette="@drawable/palette"
                app:selector="@drawable/wheel" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset Colors" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_changes" />
</LinearLayout>